release/1.14.3/VERSION.md
# 1.14.3

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.14.3```   |
| Release Time   | ```2019-06-24T12:52:52+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.14```   |
| sha1   | ```43b2f3021fe9f7d768378de95538e22da3ee8301```   |
| size   | ```227730```   |
| total size  | ```214054321```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/43b2f3021fe9f7d768378de95538e22da3ee8301/1.14.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```af100b34ec7ef2b8b9cf7775b544d21d690dddec```   |
| size   | ```18813147```   |
| url       | ```https://piston-data.mojang.com/v1/objects/af100b34ec7ef2b8b9cf7775b544d21d690dddec/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```d0d0fe2b1dc6ab4c65554cb734270872b72dadd6```   |
| size   | ```35952401```   |
| url       | ```https://piston-data.mojang.com/v1/objects/d0d0fe2b1dc6ab4c65554cb734270872b72dadd6/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |